AM_CPPFLAGS = -I$(top_srcdir)/include -I../schick

noinst_LIBRARIES = libschick_rewrite.a

libschick_rewrite_a_SOURCES = schick_common.h v302de.h\
		seg000.cpp seg000.h\
		seg001.cpp seg001.h\
		seg002.cpp seg002.h\
		seg003.cpp seg003.h\
		seg004.cpp seg004.h\
		seg005.cpp seg005.h\
		seg006.cpp seg006.h\
		seg007.cpp seg007.h\
		seg008.cpp seg008.h\
		seg009.cpp seg009.h\
		seg010.cpp seg010.h\
		seg029.cpp seg029.h\
		seg032.cpp seg032.h\
		seg038.cpp seg038.h\
		seg039.cpp seg039.h\
		seg041.cpp seg041.h\
		seg046.cpp seg046.h\
		seg047.cpp seg047.h\
		seg096.cpp seg096.h\
		seg097.cpp seg097.h\
		seg098.cpp seg098.h\
		seg103.cpp seg103.h\
		seg105.cpp seg105.h
