AM_CPPFLAGS = -I$(top_srcdir)/include -I../ -Wall -pedantic

noinst_LIBRARIES = libschick_rewrite_g105de.a

libschick_rewrite_g105de_a_SOURCES = hero.h\
		g105de_seg000.cpp g105de_seg000.h\
		g105de_seg001.cpp g105de_seg001.h\
		g105de_seg002.cpp g105de_seg002.h\
		g105de_seg003.cpp g105de_seg003.h\
		g105de_seg004.cpp g105de_seg004.h\
		g105de_seg005.cpp g105de_seg005.h\
		g105de_seg006.cpp g105de_seg006.h
