AM_CPPFLAGS = -I$(top_srcdir)/include -I../ -Wall -pedantic

noinst_LIBRARIES = libschick_rewrite_m302de.a

libschick_rewrite_m302de_a_SOURCES = schick_common.h v302de.h\
		seg000.cpp seg000.h\
		seg001.cpp seg001.h\
		seg002.cpp seg002.h\
		seg003.cpp seg003.h\
		seg004.cpp seg004.h\
		seg005.cpp seg005.h\
		seg006.cpp seg006.h\
		seg007.cpp seg007.h\
		seg008.cpp seg008.h\
		seg009.cpp seg009.h\
		seg010.cpp seg010.h\
		seg024.cpp seg024.h\
		seg026.cpp seg026.h\
		seg027.cpp seg027.h\
		seg028.cpp seg028.h\
		seg029.cpp seg029.h\
		seg030.cpp seg030.h\
		seg031.cpp seg031.h\
		seg032.cpp seg032.h\
		seg037.cpp seg037.h\
		seg038.cpp seg038.h\
		seg039.cpp seg039.h\
		seg041.cpp seg041.h\
		seg044.cpp seg044.h\
		seg045.cpp seg045.h\
		seg046.cpp seg046.h\
		seg047.cpp seg047.h\
		seg050.cpp seg050.h\
		seg053.cpp seg053.h\
		seg063.cpp seg063.h\
		seg064.cpp seg064.h\
		seg068.cpp seg068.h\
		seg073.cpp seg073.h\
		seg095.cpp seg095.h\
		seg096.cpp seg096.h\
		seg097.cpp seg097.h\
		seg098.cpp seg098.h\
		seg099.cpp seg099.h\
		seg100.cpp seg100.h\
		seg101.cpp seg101.h\
		seg102.cpp seg102.h\
		seg103.cpp seg103.h\
		seg105.cpp seg105.h\
		seg106.cpp seg106.h\
		seg108.cpp seg108.h\
		seg109.cpp seg109.h\
		seg111.cpp seg111.h\
		seg113.cpp seg113.h\
		seg120.cpp seg120.h
