AM_CPPFLAGS = -I$(top_srcdir)/include -I../

noinst_LIBRARIES = libschweif_rewrite_c102de.a

libschweif_rewrite_c102de_a_SOURCES = \
		c102de_seg000.cpp c102de_seg000.h\
		c102de_seg029.cpp c102de_seg029.h\
		c102de_seg033.cpp c102de_seg033.h\
		c102de_seg034.cpp c102de_seg034.h\
		c102de_seg037.cpp c102de_seg037.h\
		c102de_seg136.cpp c102de_seg136.h
